node-red/tmp-deploy/nr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nr-oh-service
  namespace: node-red-oh
spec:
  selector:
    app: nr-oh
  ports:
    - name: 1880-tcp
      protocol: TCP
      port: 8080
      targetPort: 1880
  type: ClusterIP
